--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <div id="top-box">
       <p>OOD Canvas Game</p>
     </div>
-    <canvas id="canvas" width="512" height="480"></canvas>
+    <canvas id="canvas" width="1200" height="800"></canvas>
 
     <!-- Scripts -->
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
