--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <canvas id="canvas" width="1200" height="800"></canvas>
 
     <!-- Scripts -->
-    <script src="js/index.js"></script>
+    <script src="js/gameClass.js"></script>
+    <script src="js/playerClass.js"></script>
+    <script src="js/bulletClass.js"></script>
+    <script src="js/bombClass.js"></script>
     <script>
 
     // Create new game
