Updated player class

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     // Create new game
     var game = new Game({
-      backgroundUrl: '../canvasgame/images/background.png',
+      backgroundUrl: './images/background.png',
       canvas: 'canvas',
       canvasContext: '2d'
     });
